<resources>
    <string name="app_name">Kallendr</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_team">Create a team</string>
    <string name="join_team">Join a team</string>
    <string name="email">Email</string>
    <string name="team_name">Team name</string>
    <string name="invite_members">Invite members</string>
    <string name="member_1_email">Member 1 Email</string>
    <string name="member_2_email">Member 2 Email</string>
    <string name="member_3_email">Member 3 Email</string>
    <string name="add_member">Add member</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_calendar_main">CalendarMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="kallendr_permissions_msg">
        Kallendr needs to access your phone calendar in order to work properly.
    </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Test 2</string>
    <string name="action_three_day_view">Test 3</string>
    <string name="action_week_view">Test 4</string>
    <string name="no_events">No events found for</string>
    <string name="action_google_signin">Sign in with Google</string>
    <string name="slogan">THE UNIVERSAL TEAM SCHEDULING APP</string>
</resources>
