<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top|center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.7"
        android:src="@drawable/ic_kallendr" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:textColor="@android:color/black"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/teamName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:textColor="@android:color/black"
        android:hint="@string/team_name" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:textColor="@android:color/black"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/userPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="24dp"
        android:alpha="0.6"
        android:textColor="@android:color/black"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <LinearLayout
            android:id="@+id/inviteMembersForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/invMember1"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:alpha="0.6"
                android:background="@android:color/transparent"
                android:hint="@string/member_1_email"
                android:tag="invMember1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:paddingBottom="15sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddMember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/add_member"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/done"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <Button
        android:id="@+id/btnInviteTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:text="@string/invite_members"
        style="?android:attr/buttonStyleSmall"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnCreateTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:text="Create team"
        style="?android:attr/buttonStyleSmall"
        android:textColor="@android:color/white" />

</LinearLayout>